@@ -17,6 +17,17 @@
 <option value="ccc">ccc</a>
 <option value="ddd">ddd</a>
 </select>
+
+<select name="exists_twice">
+    <option value="one">one</option>
+    <option value="two">two</option>
+</select>
+
+<select name="exists_twice">
+    <option value="three">three</option>
+    <option value="four">four</option>
+</select>
+
 </FORM>
 </BODY>
 </HTML>
